[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Manage env for big data modeling"
authors = ["Yuri Gama"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"
happybase = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
