[tool.poetry]
name = "workspace"
version = "0.1.0"
description = "Manage env for big data modeling"
authors = ["Yuri Gama"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyspark = "^3.3.2"
psycopg2-binary = "^2.9.1"
happybase = "^1.2.0"
pandas = "^2.1.1"
dbfread = "^2.0.7"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
